Fixed graph alignment

--- a/src/Comps/Comps.css
+++ b/src/Comps/Comps.css
@@ -115,7 +115,7 @@ nav{
 }
 .graph{
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     display: flex;
     margin-top: 10vh;
     background-color:  rgb(242, 243, 245) ;;;
@@ -126,8 +126,7 @@ nav{
 }
 .graph1{
     width: 100%;
-    /* margin: 0 10vh; */
-    padding: 2vh;
+    /* padding: 2vh; */
     border-radius: 20px;
 }
 .graph h1{
